cabal-version: 3.0
name:          r5rs
version:       0.0.0.0
license:       BSD-3-Clause
license-file:  LICENSE
build-type:    Simple

common warnings
  ghc-options:
    -Wall -Wextra -Weverything -Wcompat -Wno-implicit-prelude
    -Wno-unsafe -Wno-missing-safe-haskell-mode
    -Wno-missing-local-signatures -Wno-missing-import-lists -haddock

common defaults
  default-language:   GHC2021
  default-extensions:
    BlockArguments
    DerivingStrategies
    UnicodeSyntax

library
  import:          warnings, defaults
  exposed-modules: Lib
  other-modules:   Paths_r5rs
  hs-source-dirs:  src
  build-depends:
    , base        ^>=4.17.2.0
    , megaparsec
    , mtl
    , text
    , vector

executable r5rs
  import:         warnings, defaults
  main-is:        Main.hs
  other-modules:  Paths_r5rs
  hs-source-dirs: app
  build-depends:
    , base  ^>=4.17.2.0
    , r5rs
    , text
